--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://mikssur.github.io/frontend-todo-test",
+  "homepage": "https://mikssur.github.io/frontend-todo-test",
   "name": "test-todo-app",
   "version": "0.1.0",
   "private": true,
